kubernetes/configuration/echo-server-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  labels:
    app: echo-server
    version: v1
    env: prod
  annotations:
    prod: "true"
  namespace: training
spec:
  nodeSelector:
    type: primary
  containers:
    - name: echo-server
      image: landrzejewski/echo-server-unhealthy:v1
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          port: 8080
          path: /
        initialDelaySeconds: 5
        periodSeconds: 2
        failureThreshold: 3
        timeoutSeconds: 2
