kubernetes/configuration/nginx-ss.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-ss
  namespace: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  serviceName: site
  template:
    metadata:
      labels:
        app: site
      namespace: training
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.3-alpine
          ports:
            - containerPort: 80
              name: http
  volumeClaimTemplates:
      - metadata:
          name: site-volume-claim
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
