kubernetes/configuration/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: updater
  namespace: training
spec:
  containers:
    - name: nginx
      image: nginx:1.21.3-alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - name: storage
          mountPath: /usr/share/nginx/html
    - name: updater
      image: landrzejewski/updater:v1
      volumeMounts:
        - name: storage
          mountPath: /var/htdocs
        - name: config
          mountPath: /var/config 
      #args:
      #  - '30'

      #env:
      #  - name: INTERVAL
      #    value: '5'
      
      #env:
      #  - name: INTERVAL
      #    valueFrom:
      #      configMapRef:
      #        name: updater-cm
      #        key: INTERVAL
       
  volumes:
     - name: storage
       persistentVolumeClaim:
          claimName: updater-pvc 
       #glusterfs:
          #endpoints: gfs-svc
          #path: gv0
          #readOnly: false 
       #hostPath:
          #path: /tmp/updater
       #emptyDir:
          #medium: Memory
     - name: config
       configMap:
          name: updater-cm
