kubernetes/configuration/echo-server-svc-ci.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc
  namespace: training
spec:
  selector:
    app: echo-server
  ports:
    - port: 80
      targetPort: http #8080
