kubernetes/configuration/echo-server-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc
  namespace: training
spec:
  type: LoadBalancer
  selector:
    app: echo-server
  ports:
    - port: 80
      targetPort: http #8080
      nodePort: 30000
