kubernetes/configuration/gfs-svc.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: gfs-svc
  namespace: training
subsets:
  - addresses:
      - ip: 192.168.1.13
    ports:
      - port: 49152
  - addresses:
      - ip: 192.168.1.14
    ports:
      - port: 49152
---
apiVersion: v1
kind: Service
metadata:
  name: gfs-svc
  namespace: training
spec:
  ports:
    - port: 49152
